--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,11 @@ h1, h3 {
 }
 
 img {
-	height: 250px;
-	width: 250px;
-	border: 5px solid gray;
-	border-radius: 100%;
+	height: 350px;
+	width: 350px;
+	border: 2px solid #8b9b6d;
+	border-radius: 5%;
+	
 }
 
 #landing {
@@ -47,6 +48,7 @@ img {
 	if the flex items are in a row however, it arranges elements
 	vertically if the flex items are in column */
 	justify-content: center;
+	
 }
 
 .jumbotron {
@@ -61,7 +63,7 @@ img {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	color: #FFF08D;
+	color: #efc69b;
 	border-radius: 6px;
 }
 
@@ -74,12 +76,12 @@ ul {
 
 h3 {
 	/* targeted 'tag' h3 */
-	color: #007bff;
+	color: #8b9b6d;
 }
 
 .tools {
 	/* targeted 'class' tools */
-	border: 5px solid #f2f2f2;
+	border: 2px solid #8b9b6d;
 	/* margin--> space outside the element */
 	margin: 20px;
 	/* padding --> space inside the element */
@@ -89,6 +91,7 @@ h3 {
 	/* percentage as measurement for width base on the total width of the
 	parent element */
 	width: 75%;
+	background-color: transparent;
 }
 
 /* makes the scrolling of page smooth */
